--- a/.github/workflows/daily-trigger.yml
+++ b/.github/workflows/daily-trigger.yml
@@ -1,16 +1,29 @@
-name: Daily Notification Trigger
+name: Daily Notification Sender
 
 on:
   schedule:
-    # Runs at 01:30 UTC = 07:00 AM IST
+    # 01:30 UTC = 07:00 AM IST
     - cron: '30 1 * * *'
-  workflow_dispatch: # Allows manual testing button
+  workflow_dispatch: # Allows manual button click
 
 jobs:
-  trigger_cron:
+  send_notifications:
     runs-on: ubuntu-latest
     steps:
-      - name: Call API Route
-        run: |
-          curl -X GET ${{ secrets.SITE_URL }}/api/cron/daily \
-          -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}"
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install Dependencies
+        run: npm install firebase-admin @supabase/supabase-js
+
+      - name: Run Notification Script
+        env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          FIREBASE_SERVICE_PRIVATE_KEY: ${{ secrets.FIREBASE_SERVICE_PRIVATE_KEY }}
+        run: node scripts/daily-cron.js
